css/core.css
/* ... */
._2Q0Ip_IWHuGAzjG8gs-fgD {
  right: var(--zehn-size-spacing-md) !important;
  bottom: unset !important;
}

._2KhPXikozxMpbIRo_6jPxW._21EoN2ZlmHNY3fjho_HMae img {
  filter: none !important;
}

/* CLOSE KEYBOARD */
._2KhPXikozxMpbIRo_6jPxW.Col_6.KeyTheme_VKClose svg {
  width: 100% !important;
  height: 100% !important;
  background-color: var(--zehn-color-icon-primary) !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
  mask-size: var(--zehn-size-icon-md) !important;
  -webkit-mask-image: var(--zehn-icon-keyboard) !important;

  * { display: none !important; }
}

._2KhPXikozxMpbIRo_6jPxW._1WbIjnypHqw8t8_NFQHPJr.Col_0.KeyTheme_SwitchKeys_Steam svg {
  width: 100% !important;
  height: 100% !important;
  background-color: var(--zehn-color-icon-primary) !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
  mask-size: var(--zehn-size-icon-md) !important;
  -webkit-mask-image: var(--zehn-icon-emoticon) !important;

  * { display: none !important; }
}

._2KhPXikozxMpbIRo_6jPxW._1WbIjnypHqw8t8_NFQHPJr.Col_1.KeyTheme_SwitchKeys_Layout svg {
  width: 100% !important;
  height: 100% !important;
  background-color: var(--zehn-color-icon-primary) !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
  mask-size: var(--zehn-size-icon-md) !important;
  -webkit-mask-image: var(--zehn-icon-globe) !important;

  * { display: none !important; }
}

/* ------------------------------------------------------------------------------------------------------------------ */










/* SCROLLBAR -------------------------------------------------------------------------------------------------------- */

::-webkit-scrollbar {
  border-radius: var(--zehn-size-radius-square) !important;
  -webkit-box-shadow: none !important;
  border: none !important;
  background: transparent !important;
}

::-webkit-scrollbar,
::-webkit-scrollbar:window-inactive  {
  width: var(--zehn-scrollbar-width) !important;
  height: 0 !important;
}

::-webkit-scrollbar:horizontal,
::-webkit-scrollbar:horizontal:window-inactive {
  width: 0 !important;
  height: var(--zehn-scrollbar-width) !important;
}

/* TRACK */
::-webkit-scrollbar-track {
  border-radius: var(--zehn-size-radius-square) !important;
  background: var(--zehn-scrollbar-unfocused-background) !important;
}

div:hover>::-webkit-scrollbar:not(:window-inactive) {
  background-color: var(--zehn-scrollbar-focused-background) !important;
}

/* CORNER */
::-webkit-scrollbar-corner,
::-webkit-scrollbar-corner:window-inactive {
  border: none !important;
  background-color: var(--zehn-color-scrollbar-corner) !important;
}

/* BUTTON */
::-webkit-scrollbar-button {
  border: none !important;
  background-repeat: no-repeat !important;
  background-position: center !important;
  background-size: var(--zehn-size-icon-sm) !important;
  --button-size: var(--zehn-scrollbar-unfocused-button-size);
}

*::-webkit-scrollbar-button {
  display: block !important;
}

::-webkit-scrollbar-button:vertical {
  height: var(--button-size) !important;
  width: var(--zehn-scrollbar-width) !important;
  max-height: var(--button-size) !important;
  max-width: var(--zehn-scrollbar-width) !important;
}

::-webkit-scrollbar-button:horizontal {
  height: var(--zehn-scrollbar-width) !important;
  width: var(--button-size) !important;
  max-height: var(--zehn-scrollbar-width) !important;
  max-width: var(--button-size) !important;
}

::-webkit-scrollbar-button:single-button:window-inactive {
  --button-size: var(--zehn-scrollbar-unfocused-button-size);
  background-color: var(--zehn-color-scrollbar-button-unfocused) !important;
}

::-webkit-scrollbar-button:single-button:window-inactive:hover {
  background-color: var(--zehn-color-scrollbar-button-unfocused-hover) !important;
}

::-webkit-scrollbar-button:single-button:window-inactive:active {
  background-color: var(--zehn-color-scrollbar-button-unfocused-active) !important;
}

div:hover::-webkit-scrollbar-button:single-button:not(:window-inactive) {
  --button-size: var(--zehn-scrollbar-focused-button-size);
  background-color: var(--zehn-color-scrollbar-button-focused) !important;
}

div:hover::-webkit-scrollbar-button:single-button:not(:window-inactive):hover {
  background-color: var(--zehn-color-scrollbar-button-focused-hover) !important;
}

div:hover::-webkit-scrollbar-button:single-button:not(:window-inactive):active {
  background-color: var(--zehn-color-scrollbar-button-focused-active) !important;
}

::-webkit-scrollbar-button {
  color: var(--zehn-color-scrollbar-button-glyph) !important;
}

::-webkit-scrollbar-button:active {
  color: var(--zehn-color-scrollbar-button-glyph-active) !important;
}

@media (prefers-color-scheme: light) {
  ::-webkit-scrollbar-button:single-button:decrement {
    background-image: var(--zehn-icon-scroll-up-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:decrement:horizontal {
    background-image: var(--zehn-icon-scroll-left-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:increment {
    background-image: var(--zehn-icon-scroll-down-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:increment:horizontal {
    background-image: var(--zehn-icon-scroll-right-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:decrement:active {
    background-image: var(--zehn-icon-scroll-up-active-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:decrement:horizontal:active {
    background-image: var(--zehn-icon-scroll-left-active-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:increment:active {
    background-image: var(--zehn-icon-scroll-down-active-light) !important;
  }

  ::-webkit-scrollbar-button:single-button:increment:horizontal:active {
    background-image: var(--zehn-icon-scroll-right-active-light) !important;
  }
}
/* ... */

